--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -120,7 +120,7 @@
     <string name="filedetails_sync_file">Synchronize</string>
     <string name="filedetails_renamed_in_upload_msg">File renamed to %1$s during upload</string>
     <string name="list_layout">Listed layout</string>
-    <string name="action_share">Share</string>
+    <string name="action_send_share">Send/Share</string>
     <string name="common_yes">Yes</string>
     <string name="common_no">No</string>
     <string name="common_ok">OK</string>
@@ -753,4 +753,8 @@
     <string name="prefs_category_dev">Dev</string>
     <string name="dev_version_no_information_available">No information available!</string>
     <string name="dev_version_no_new_version_available">No new version available!</string>
+    
+    <string name="send">Send</string>
+    <string name="share">Share</string>
+    <string name="link">Link</string>
 </resources>
