further rtl support

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -724,4 +724,5 @@
     <string name="prefs_category_dev">Dev</string>
     <string name="dev_version_no_information_available">No information available!</string>
     <string name="dev_version_no_new_version_available">No new version available!</string>
+    <string name="folder_icon">Folder icon</string>
 </resources>
